# stk2eth

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  DOCKER.md  Dockerfile  Makefile  PROJECT_OVERVIEW.md  README.md  SETUP.md  STATUS.md  WARP.md  docker-compose.yml  stress_test.sh
.github/: CI_IMPLEMENTATION_SUMMARY.md  CI_SETUP.md  COVERAGE_NOTE.md  PULL_REQUEST_TEMPLATE.md  QUICK_START_CI.md  README.md
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
broadcaster/: Cargo.toml
broadcaster/src/: abi.rs  config.rs  error.rs  main.rs  reconcile.rs  signer.rs  submitter.rs  subscriber.rs  watcher.rs
broadcaster/src/stdb/: app_config_table.rs  app_config_type.rs  auth_7702_table.rs  auth_7702_type.rs  auth_status_type.rs  balance_query_table.rs  balance_query_type.rs  claim_gateway_identity_reducer.rs  confirm_eth_tx_reducer.rs  esim_profile_table.rs  esim_profile_type.rs  eth_audit_log_type.rs  eth_audit_logs_table.rs  eth_tx_table.rs  eth_tx_type.rs  fail_eth_tx_reducer.rs  log_send_eth_transaction_reducer.rs  log_send_eth_transaction_with_fatf_reducer.rs  map_phone_to_wallet_reducer.rs  mark_auth_7702_active_reducer.rs  mark_eth_tx_broadcast_reducer.rs  mark_eth_tx_processing_reducer.rs  menu_item_table.rs  mod.rs  process_ussd_step_reducer.rs  query_status_type.rs  router_option_table.rs  screen_type_type.rs  sms_notification_table.rs  sms_notification_type.rs  sms_status_type.rs  sms_template_type.rs  tx_status_type.rs  tx_type_type.rs  user_key_table.rs  user_key_type.rs  user_pin_table.rs  user_pin_type.rs  user_preferences_table.rs  user_preferences_type.rs  (+17 more)
broadcaster/tests/: integration_anvil.rs
broadcaster/tests/fixtures/: test-keystore.json
broadcaster/tests/helpers/: mod.rs
client/: ethclient.py  pyproject.toml  requirements.txt  stdb_client.py  stdb_client_v2.py  ussdclient.py
contracts/: README.md
contracts/abi/: Burner7702.json
doc/: CI_SETUP.md  DEPLOYMENT.md  IMPLEMENTATION_VERIFICATION.md  LINTING_GUIDE.md  PROJECT_OVERVIEW.md  README.md  SECRETS_SETUP.md  TESTING_SUMMARY.md  USSD_CALLBACK_SETUP.md
docs/: CI_CD_FIXES.md  CNAME  PIN_VALIDATION_ENHANCEMENTS.md  PIN_VALIDATION_FINAL.md  PIN_VALIDATION_IMPLEMENTATION.md  PIN_VALIDATION_IMPROVEMENTS.md  index.html
docs/superpowers/plans/: 2026-04-17-middleware-foundation.md  2026-04-18-plan-2a-broadcaster.md
docs/superpowers/specs/: 2026-04-17-stk2eth-phase1-core-redesign.md  2026-04-18-plan-2a-broadcaster-design.md
ethclient/: Cargo.toml  README.md  ethclient_v2.py  stdb_client_v5.py
ethclient/contracts/: Burner7702.sol  Permit2WithOperatorOnlyERC1271.sol  README.md
ethclient/scripts/core/: hashing.py  permit2_types.py  utils.py  wallet.py
ethclient/scripts/core/tests/: test_hashing.py
ethclient/src/: client.rs  lib.rs  main.rs
ethclient/tests/: test_permit2_with_operator.py  test_permit2_with_operator_v2.py
middleware/: Cargo.toml  README.md
middleware/src/: amount_validation_tests.rs  audit_tests.rs  lib.rs  pin_validation_tests.rs  swap_tests.rs  tables.rs
middleware/src/auth/: mod.rs  wallet.rs
middleware/src/auth/list/: hashing.rs  mod.rs  tables.rs  types.rs
middleware/src/auth/pin/: tables.rs
middleware/src/data/: menu.json
middleware/src/eth/: mod.rs
middleware/src/eth/tx/: encoding.rs  mapping.rs  mod.rs  params.rs  selector.rs  tables.rs  types.rs
middleware/src/functions/: cancel.rs  dispatch.rs  mod.rs  pin.rs  register.rs  utils.rs  validate.rs
middleware/src/reducers/: broadcaster.rs  gateway_identity.rs  mod.rs  validate_phone.rs
middleware/src/ussd/: intent.rs  mod.rs  session.rs
middleware/src/ussd/screen/: executor.rs  mod.rs  tables.rs  types.rs  view.rs
middleware/src/ussd/service/: mod.rs  runtime.rs  tables.rs  types.rs  utils.rs
pyethclient/: ape-config.yaml  ethclient_v2.py
pyethclient/contracts/: EsimRegistry.sol  README.md
pyethclient/scripts/core/: auth_7702.py
pyethclient/tests/: test_permit2_with_operator.py
scripts/: README.md  deploy.sh  healthcheck.sh  setup-droplet.sh  validate_ci.sh  validate_testnet.rs
src/: lib.rs
tests/: Cargo.toml  README.md  mod.rs  test_send_eth.rs  test_send_eth_menu.py
tests/e2e/: test_ussdclient_flows.py
tests/integration/: send_eth_flow_e2e_test.rs  send_eth_test.rs
tests/smoke/: test_broadcaster_flow.sh  test_claim_gateway_identity.sh  test_register_pin_flow.sh
tests/src/: lib.rs
tests/stress/: concurrent_sessions_test.rs
tools/validate_menu/: Cargo.toml
tools/validate_menu/src/: main.rs
ussdclient/: Cargo.toml  README.md  requirements.txt  ussdclient_v2.py
ussdclient/src/: main.rs
ussdgeth/: .gitignore  Cargo.toml  README.md
ussdgeth/src/: amount_validation_tests.rs  audit_reducers.rs  audit_tests.rs  crypto.rs  ethclient_wrapper.rs  lib.rs  mock_context.rs  pin_validation_tests.rs  prelude.rs  swap_tests.rs
ussdgeth/src/controller/: mod.rs
ussdgeth/src/data/: menu.json
ussdgeth/src/functions/: cancel.rs  mod.rs  pin.rs  register.rs  validate.rs
ussdgeth/src/reducers/: amount_validation.rs  keys.rs  mod.rs  send_eth.rs  validate_phone.rs  validate_pin.rs
ussdgeth/src/ussdframework/: mod.rs  types.rs  ussd_menu.rs  ussd_screens.rs  ussd_service.rs  ussd_session.rs  utils.rs
