[workspace]
members = ["ussdgeth", "ussdclient", "ethclient"]
resolver = "2"

[workspace.dependencies]
# Common dependencies for testing
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
dotenv = "0.15"

# Testing dependencies
tokio-test = "0.4"
wiremock = "0.6"
assert_matches = "1.5"
chrono = { version = "0.4", features = ["serde"] }
