[package]
name = "broadcaster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "broadcaster"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.8", features = [
    "provider-http",
    "provider-ws",
    "signer-local",
    "signer-keystore",
    "rpc-types-eth",
    "consensus",
    "eips",
    "sol-types",
    "contract",
    "network",
] }
spacetimedb-sdk = "1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.10"
thiserror = "2.0"
eth-keystore = "0.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
