[package]
name = "ethclient"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2", features = ["abigen", "ws", "rustls"] }
anyhow = "1.0.100"
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenv = "0.15.0"

[lib]
name = "ethclient"
path = "src/lib.rs"

[[bin]]
name = "ethclient"
path = "src/main.rs"