[package]
name = "ethclient"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
ethers-providers = { version = "2", default-features = false, features = ["rustls"] }
ethers-signers = "2"
ethers-core = "2"
ethers-middleware = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
spacetimedb-sdk = "1"
hex = "0.4"
futures = "0.3"
