[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.8.0"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
subtle = "2.5"
rust_decimal = "1.33"
dotenv = "0.15"

# helpers
k256 = "0.13.4"
hex = "0.4.3"
rlp = "0.6.1"
sha3 = "0.10.8"
sha2 = "0.10.9"


[dev-dependencies]
tokio-test = "0.4"
