[package]
name = "ussdclient"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
axum = "0.8.4"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
hyper = "1.7.0"
