[package]
name = "ussdgeth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.8.0"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
thiserror = "1.0"

# helpers
lazy_static = "1.4.0"


[dev-dependencies]
tokio-test = "0.4"
