[package]
name = "ussdgeth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ethclient = { path = "../ethclient" }
spacetimedb = "1.1.2"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
rand = "0.8"
subtle = "2.5"
rust_decimal = "1.33"
base64 = "0.22.1"
hex = "0.4.3"
aes-gcm = "0.11.0-rc.1"
ethers = "2.0.14"
#tokio = "1.47.1"
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
reqwest = "0.12.23"
tracing = "0.1.41"

[dev-dependencies]
tokio-test = "0.4"